style.css
body{
    margin: 0;
    padding: 0;
    width: 100%;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-style: normal;
    background-color: #0a152e;
    color: #fff;
}
.container{
    display: flex;
    flex-direction: column;
    max-width: 1440px;
    width: 100%;
    height: auto;
    padding: 0 clamp(16px, 5vw, 48px); 
}
/*

.tangerine-regular {
  font-family: "Tangerine", cursive;
  font-weight: 400;
  font-style: normal;
}

.tangerine-bold {
  font-family: "Tangerine", cursive;
  font-weight: 700;
  font-style: normal;
}

.poppins-thin {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.poppins-extralight {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: normal;
}

.poppins-light {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.poppins-regular {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.poppins-medium {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.poppins-semibold {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.poppins-bold {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.poppins-extrabold {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: normal;
}

.poppins-black {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.poppins-thin-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: italic;
}

.poppins-extralight-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: italic;
}

.poppins-light-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.poppins-regular-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.poppins-medium-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: italic;
}

.poppins-semibold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: italic;
}

.poppins-bold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.poppins-extrabold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: italic;
}

.poppins-black-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: italic;
}

*/

/* Header */

header{
    display: flex;
    justify-content: center;
    /* background-color: black; */
    width: 100%;
    height: 80px;
    position: sticky;
    top: 0;
    z-index: 1000;
}
header .container{
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
header span{
    font-family: "Tangerine", cursive;
    font-weight: 600;
    font-style: normal;
    font-size: 2.5rem;
}
header ul{
    list-style: none;
    display: flex;
    gap: 16px;
}
header ul li a{
    text-decoration: none;
    color: #fff;
    font-family: "Tangerine", cursive;
    font-weight: 600;
    font-style: normal;
    font-size: 2rem;
}

/* Banner */

.hero{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
    margin: -80px 0 0 0;
    text-align: center;
}
h1{
    font-family: "Tangerine", cursive;
    font-weight: 400;
    font-style: normal;
    font-size: 10rem;
    font-weight: 700;
    margin: 0;
    color: #e7d9b6;
}
.hero h2{
  margin: -30px 0 0 0;
  text-transform: uppercase;
  letter-spacing: 0.5rem;
  color: #e7d9b6;
}
.hero span{
  width: 50%;
  height: 2px;
  background-color: #e7d9b6;
  margin-top: 30px;
  margin-left: auto;
  margin-right: auto;
}

/* CARREIRA */

.carreira{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

/* APRESENTACAO */

.apresentacao{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

/* PARA QUEM */

.para-quem{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

/* PROBLEMA CENTRAL */

.problema-central{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.transformacao{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.beneficios{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.diferencial{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.aulas{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.diferente{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.sobre{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.resultado{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.informacoes{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.chamada{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.cta-final{
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

footer{
    display: flex;
    justify-content: center;
    background-color: black;
    width: 100%;
    height: auto;
}

